--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -1,8 +1,9 @@
 name: Playwright Tests
 on:
-  pull_request:
-    branches:
-      - main
+ push:
+   branches: [ main ]
+ pull_request:
+   branches: [ main ]
 
 jobs:
   test_setup:
