--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "npm run build && next start",
 		"lint": "next lint",
 		"test": "jest --watch",
 		"test:e2e": "playwright test"
