--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -18,6 +18,7 @@ jobs:
         uses: patrickedqvist/wait-for-vercel-preview@v1.2.0
         id: waitForVercelPreviewDeployment
         with:
+          node-version: "16"
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 300
   test_e2e:
